Fix uneven margins

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -6,7 +6,7 @@
 }
 
 .feature {
-  width: calc(50% - 1rem);
+  width: 50%;
 }
 
 .newest-podcast {
